updated img paths
updated image paths for git to show

--- a/_pages/livinstone.html
+++ b/_pages/livinstone.html
@@ -7,21 +7,21 @@ permalink: /livingstone/
 <div class="container">
 	<div class="row">
 		<div class="col">
-			<img src="/images/livingstone.png" alt="LivingStone">
+			<img src="images/livingstone.png" alt="LivingStone">
 		</div>
 	</div>
 
 	<div class="row">
 		<div class="col">
-			<img src="/images/livingstone-oolala.png" width="100%" alt="LivingStone">
+			<img src="images/livingstone-oolala.png" width="100%" alt="LivingStone">
 		</div>
 		<div class="col">
 			<h2>Smart Palette &trade;</h2>
 			<p>Product selections should be fun and engaging. However too many choices make the process more complicated and time consuming than it needs to be. That is why we developed "SmartPalette&trade;".</p>
 			<p>46 Exceptional colors, large enough to coordinate with any project yet small enough to provide exceptional value.</p>
- 
+
 			<p>With a focused approach on providing the best- selling and most specified colors for both commercial and residential projects we have developed a logical and refined range of hues and patterns that take the pressure and stress out of product selections. Whether you need a neutral for a commercial project or brown hue for a residential project we offer a comprehensive yet manageable selection that allows you to easily coordinate our product with virtually any project, yet limited enough to allow exceptional value and budget friendly selections.</p>
- 
+
 			<p>With "SmartPalette&trade;" we can offer large particulate, premium colors priced below the small particulate colors of other leading brands, providing an elegance and sophistication to your project and peace of mind to your client.</p>
 		</div>
 	</div>
@@ -30,11 +30,11 @@ permalink: /livingstone/
 		<div class="col">
 			<h2>The LivingStone&reg; Difference</h2>
 			<p>For most of their careers, the principals of USSW have been involved in the manufacturing and marketing of the best-selling solid surface brands. We came to believe that to continue to grow and prosper, the solid surface industry needed fresh thinking. That is why we established LivingStone® in 2007.</p>
- 
+
 			<p>With the ever increasing number of colors we knew the model needed to change. So we built a private, vertically integrated company with leading edge manufacturing capabilities. This allows us to eliminate redundant, non-value added costs and enhance the value proposition of solid surface for our clients.</p>
 		</div>
 		<div class="col">
-			<img src="/images/livingstone-difference.png" width="100%" alt="LivingStone">
+			<img src="images/livingstone-difference.png" width="100%" alt="LivingStone">
 		</div>
 	</div>
 
