--- a/_pages/vendors.html
+++ b/_pages/vendors.html
@@ -5,31 +5,31 @@ permalink: /vendors/
 ---
 
 <div class="container">
-	
+
 	<div class="row series">
 		<div class="col">
-			<img src="/images/livingstone.png" alt="LivingStone">
+			<img src="images/livingstone.png" alt="LivingStone">
 			<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 		</div>
 	</div>
 
 	<div class="row series">
 		<div class="col">
-			<img src="/images/vadara.png" alt="Vadara">
+			<img src="images/vadara.png" alt="Vadara">
 			<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 		</div>
 	</div>
 
 	<div class="row series">
 		<div class="col">
-			<img src="/images/gemstone.png" width="100%" style="max-width: 350px;" alt="Gemstone">
+			<img src="images/gemstone.png" width="100%" style="max-width: 350px;" alt="Gemstone">
 			<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 		</div>
 	</div>
 
 	<div class="row series">
 		<div class="col">
-			<img src="/images/integraadhesives.png" width="100%" style="max-width: 350px;" alt="Integra Adhesives">
+			<img src="images/integraadhesives.png" width="100%" style="max-width: 350px;" alt="Integra Adhesives">
 			<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 		</div>
 	</div>
