--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: "Home"
 permalink: /
 ---
-<div class="parallax-window" data-parallax="scroll" data-image-src="/images/escape-series/tall-SNOWFALL.jpg">
+<div class="parallax-window" data-parallax="scroll" data-image-src="images/escape-series/tall-SNOWFALL.jpg">
 <div class="row-full">
 	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 	  <ol class="carousel-indicators">
@@ -15,19 +15,19 @@ permalink: /
 	  </ol>
 	  <div class="carousel-inner">
 	    <div class="carousel-item active">
-	      <img class="d-block w-100" src="/images/s1.jpg" width="100%" alt="First slide">
+	      <img class="d-block w-100" src="images/s1.jpg" width="100%" alt="First slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100" src="/images/s2.jpg" width="100%" alt="Second slide">
+	      <img class="d-block w-100" src="images/s2.jpg" width="100%" alt="Second slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100" src="/images/s3.jpg" width="100%" alt="Third slide">
+	      <img class="d-block w-100" src="images/s3.jpg" width="100%" alt="Third slide">
 	    </div>
 	     <div class="carousel-item">
-	      <img class="d-block w-100" src="/images/s4.jpg" width="100%" alt="Second slide">
+	      <img class="d-block w-100" src="images/s4.jpg" width="100%" alt="Second slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100" src="/images/s5.jpg" width="100%" alt="Third slide">
+	      <img class="d-block w-100" src="images/s5.jpg" width="100%" alt="Third slide">
 	    </div>
 	  </div>
 	  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -40,7 +40,7 @@ permalink: /
 	  </a>
 	</div>
 
-	
+
 </div>
 
 <div class="row-full d-flex justify-content-center hpFormBg">
