updating paths again
updating more paths to be absolute

--- a/_pages/livinstone.html
+++ b/_pages/livinstone.html
@@ -7,13 +7,13 @@ permalink: /livingstone/
 <div class="container">
 	<div class="row">
 		<div class="col">
-			<img src="images/livingstone.png" alt="LivingStone">
+			<img src="https://ajwahlb.github.io/midwestsurfacesupply/images/livingstone.png" alt="LivingStone">
 		</div>
 	</div>
 
 	<div class="row">
 		<div class="col">
-			<img src="images/livingstone-oolala.png" width="100%" alt="LivingStone">
+			<img src="https://ajwahlb.github.io/midwestsurfacesupply/images/livingstone-oolala.png" width="100%" alt="LivingStone">
 		</div>
 		<div class="col">
 			<h2>Smart Palette &trade;</h2>
@@ -34,7 +34,7 @@ permalink: /livingstone/
 			<p>With the ever increasing number of colors we knew the model needed to change. So we built a private, vertically integrated company with leading edge manufacturing capabilities. This allows us to eliminate redundant, non-value added costs and enhance the value proposition of solid surface for our clients.</p>
 		</div>
 		<div class="col">
-			<img src="images/livingstone-difference.png" width="100%" alt="LivingStone">
+			<img src="https://ajwahlb.github.io/midwestsurfacesupply/images/livingstone-difference.png" width="100%" alt="LivingStone">
 		</div>
 	</div>
 
