--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@ permalink: /
 	  </ol>
 	  <div class="carousel-inner">
 	    <div class="carousel-item active">
-	      <img class="d-block w-100" src="images/s1.jpg" width="100%" alt="First slide">
+	      <img class="d-block w-100" src="https://ajwahlb.github.io/midwestsurfacesupply/images/s1.jpg" width="100%" alt="First slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100" src="images/s2.jpg" width="100%" alt="Second slide">
+	      <img class="d-block w-100" src="https://ajwahlb.github.io/midwestsurfacesupply/images/s2.jpg" width="100%" alt="Second slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100" src="images/s3.jpg" width="100%" alt="Third slide">
+	      <img class="d-block w-100" src="https://ajwahlb.github.io/midwestsurfacesupply/images/s3.jpg" width="100%" alt="Third slide">
 	    </div>
 	     <div class="carousel-item">
-	      <img class="d-block w-100" src="images/s4.jpg" width="100%" alt="Second slide">
+	      <img class="d-block w-100" src="https://ajwahlb.github.io/midwestsurfacesupply/images/s4.jpg" width="100%" alt="Second slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100" src="images/s5.jpg" width="100%" alt="Third slide">
+	      <img class="d-block w-100" src="https://ajwahlb.github.io/midwestsurfacesupply/images/s5.jpg" width="100%" alt="Third slide">
 	    </div>
 	  </div>
 	  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
